usagov-91 fixed spacing of sign up button

--- a/themes/custom/usagov/sass/_uswds-theme-custom-styles.scss
+++ b/themes/custom/usagov/sass/_uswds-theme-custom-styles.scss
@@ -359,7 +359,7 @@ This style ensures that we can remove the padding-top from text in a card body. 
       color:white;
       font-size: 1.06rem;
       @media (max-width: 30em){
-         width: 96px;
+         width: 100px;
       }
    }
 }
